[tool.poetry]
name = "stairlight-app"
version = "0.1.0"
description = ""
authors = ["tosh2230 <rev.to12@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.2"
streamlit = "^1.11.1"
stairlight = {version = "^0.6.1", extras = ["gcs"]}
graphviz = "^0.18.2"
platformdirs = "^2.4.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
isort = "^5.10.1"
black = "^21.11b0"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
